...
import com.neptune.neptune.ui.settings.SettingsScreenTestTags.DISABLE_HELP_SWITCH
import com.neptune.neptune.ui.theme.NepTuneTheme
import com.neptune.neptune.ui.util.NeptuneTopBar
import kotlinx.coroutines.launch

object SettingsScreenTestTags {
  const val DISABLE_HELP_SWITCH = "disableHelpSwitch"
}

/**
 * Displays the settings screen.
 *
 * This screen provides a top bar with a back navigation button and hosts various settings sections,
...
